Final version v1 + javascript function to create functionality for a basket

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="box_search">
                         <form action="">
                             <input id="search" type="search" value="" placeholder="search" name="search">
-                            <button id="make_search" type="submit"> <i class="fa fa-search"> </i></button>
+                            <button id="make_search" type="submit"> <i class="fa fa-search"> </i> </button>
                         </form>
                     </div>
                     <nav>
@@ -275,6 +275,8 @@
         </ul>
     </footer>
     <script src="./javascript/index.js">
+    </script>
+    <script src="./javascript/basket.js">
     </script>
 </body>
 
