--- a/about.html
+++ b/about.html
@@ -169,6 +169,8 @@
     </footer>
     <script src="./javascript/index.js">
     </script>
+    <script src="./javascript/basket.js">
+    </script>
 </body>
 
 </html>
