--- a/basket.html
+++ b/basket.html
@@ -87,6 +87,8 @@
     </footer>
     <script src="./javascript/index.js">
     </script>
+    <script src="./javascript/basket.js">
+    </script>
 </body>
 
 
