--- a/contact.html
+++ b/contact.html
@@ -100,6 +100,8 @@
     </footer>
     <script src="./javascript/index.js">
     </script>
+    <script src="./javascript/basket.js">
+    </script>
 </body>
 
 </html>
