--- a/create_account.html
+++ b/create_account.html
@@ -108,6 +108,8 @@
     </footer>
     <script src="./javascript/index.js">
     </script>
+    <script src="./javascript/basket.js">
+    </script>
 </body>
 
 </html>
