--- a/products.html
+++ b/products.html
@@ -240,6 +240,8 @@
     </footer>
     <script src="./javascript/index.js">
     </script>
+    <script src="./javascript/basket.js">
+    </script>
 </body>
 
 </html>
