--- a/products.html
+++ b/products.html
@@ -48,158 +48,11 @@
     <section class="featured-products">
         <div class="container">
             <h2> All our products </h2>
-            <div class="row">
-                <div class="col-4">
-                    <img class="image_product" src="images/product-1.jpg" alt="product 1">
-                    <h3> Puma red T-shirt </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 15,00€ </p>
-                </div>
-                <div class="col-4">
-                    <img class="image_product" src="images/product-2.jpg" alt="product 1">
-                    <h3> HRX black baskets </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 40,00€ </p>
-                </div>
-                <div class="col-4">
-                    <img class="image_product" src="images/product-3.jpg" alt="product 1">
-                    <h3> Adidas grey baskets </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 60,00€ </p>
-                </div>
-                <div class="col-4">
-                    <img class="image_product" src="images/product-4.jpg" alt="product 1">
-                    <h3> Puma blue T-shirt </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 25,00€ </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="featured-products">
-        <div class="container">
-            <div class="row">
-                <div class="col-4">
-                    <img class="image_product" src="images/product-5.jpg" alt="product 1">
-                    <h3> HRX grey baskets </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 50,00€ </p>
-                </div>
-                <div class="col-4">
-                    <img class="image_product" src="images/product-6.jpg" alt="product 1">
-                    <h3> Puma black T-shirt </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 20,00€ </p>
-                </div>
-                <div class="col-4">
-                    <img class="image_product" src="images/product-7.jpg" alt="product 1">
-                    <h3> HRX 3 darks colors sockets </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 15,00€ </p>
-                </div>
-                <div class="col-4">
-                    <img class="image_product" src="images/product-8.jpg" alt="product 1">
-                    <h3> Armani black watch </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 135,00€ </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <img class="image_product" src="images/product-9.jpg" alt="product 1">
-                    <h3> Diesel black and yellow watch </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 110,00€ </p>
-                </div>
-                <div class="col-4">
-                    <img class="image_product" src="images/product-10.jpg" alt="product 1">
-                    <h3> HRX black and red baskets </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 35,00€ </p>
-                </div>
-                <div class="col-4">
-                    <img class="image_product" src="images/product-11.jpg" alt="product 1">
-                    <h3> HRX light grey baskets </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 30,00€ </p>
-                </div>
-                <div class="col-4">
-                    <img class="image_product" src="images/product-12.jpg" alt="product 1">
-                    <h3> HRX black jogging </h3>
-                    <div class="rating">
-                        <i class="fa fa-star" aria-hidden="true"> </i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star" aria-hidden="true"></i>
-                        <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                        <i class="fa fa-star-o" aria-hidden="true"></i>
-                    </div>
-                    <p> 35,00€ </p>
+            <div class="rowAllProducts">
+                <div class="productPageProducts">
+                    <img class="image_product" src="" alt="">
+                    <h3 class="nameProduct"> </h3>
+                    <p class="price"> </p>
                 </div>
             </div>
         </div>
