Pop-up nearly ok soon reflexion about perfect all the design implement

--- a/products.html
+++ b/products.html
@@ -95,6 +95,7 @@
     </script>
     <script src="./javascript/basket.js">
     </script>
+    <script src="./javascript/getAllProducts.js"> </script>
 </body>
 
 </html>
