Working on the popup

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body style="margin-top: -150px;">
-    <div class="popup">
+    <div class="popup" id="active">
         <h3> New Style </h3>
         <div class="contentPopup">
             <p> This site needs a lot of resources to facilitate the purchase of consumers. This work is based on the
