Finishingthe cookie popup

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li> <a href="create_account.html"> Account </a> </li>
         </ul>
     </div>
-    <section class="header-section">
+    <section id="header-section">
         <div class="container">
             <header class="navbar">
                 <div class="navbar1">
