--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body>
+<body style="margin-top: -150px;">
     <div id="burger_box">
         <ul>
             <li> <a href="index.html"> Home </a> </li>
@@ -22,7 +22,7 @@
             <li> <a href="create_account.html"> Account </a> </li>
         </ul>
     </div>
-    <section class="header-section">
+    <section id="header-section">
         <div class="container">
             <header class="navbar">
                 <div class="navbar1">
