Preparation HTML SASS of the basket before javascript coding

--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
             </div>
         </ul>
     </footer>
-    <script src="./javascript/index.js">
+    <script type="module" src="./javascript/index.js">
     </script>
     <script src="./javascript/basket.js">
     </script>
