--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
             </div>
         </ul>
     </footer>
-    <script src="./javascript/index.js">
+    <script type="module" src="./javascript/index.js">
     </script>
     <script src="./javascript/basket.js">
     </script>
