--- a/create_account.html
+++ b/create_account.html
@@ -106,7 +106,7 @@
             </div>
         </ul>
     </footer>
-    <script src="./javascript/index.js">
+    <script type="module" src="./javascript/index.js">
     </script>
     <script src="./javascript/basket.js">
     </script>
