--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
         </ul>
     </footer>
-    <script src="./javascript/index.js"> </script>
+    <script type="module" src="./javascript/index.js"> </script>
     <script src="./javascript/basket.js"> </script>
     <script data-main="./javascript" src="./javascript/RequireJS.nuspec"> </script>
     <script src="./javascript/getHomeProducts1.js"> </script>
