--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
     <script src="./javascript/basket.js"> </script>
     <script data-main="./javascript" src="./javascript/RequireJS.nuspec"> </script>
     <script src="./javascript/getHomeProducts1.js"> </script>
-    <script src="./javascript/getHomeProducts2.js"> </script>
+    <script type="module" src="./javascript/getHomeProducts2.js"> </script>
 </body>
 
 </html>
